--- a/auth/page/package.json
+++ b/auth/page/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^2.2.2",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.65",
     "vue": "^3.0.0",
     "vue-i18n": "^9.1.7"
   },
