--- a/auth/web/front/package.json
+++ b/auth/web/front/package.json
@@ -1,41 +1,37 @@
 {
-  "private": true,
+  "name": "front",
+  "version": "0.0.0",
   "scripts": {
-    "start": "umi dev",
-    "build": "umi build",
-    "postinstall": "umi generate tmp",
-    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
-    "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
-      "prettier --write"
-    ],
-    "*.ts?(x)": [
-      "prettier --parser=typescript --write"
-    ]
+    "serve": "vite preview",
+    "build": "vite build",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/pro-form": "^1.52.7",
-    "@ant-design/pro-layout": "^6.5.0",
-    "@types/qrcode": "^1.4.2",
-    "qrcode": "^1.5.0",
-    "react": "17.x",
-    "react-dom": "17.x",
-    "umi": "^3.5.20"
+    "@mdi/font": "5.9.55",
+    "balm-ui": "^9.40.0",
+    "qrcode-reader-vue3": "^3.1.2",
+    "qrcode-vue3": "^1.4.17",
+    "roboto-fontface": "*",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.12",
+    "vuetify": "^3.0.0-alpha.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@umijs/preset-react": "1.x",
-    "@umijs/test": "^3.5.20",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.2.0",
-    "typescript": "^4.1.2",
-    "yorkie": "^2.0.0"
+    "@vicons/ionicons5": "^0.11.0",
+    "@vicons/material": "^0.11.0",
+    "@vitejs/plugin-vue": "^2.0.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.3",
+    "@vue/cli-plugin-babel": "5.0.0-beta.7",
+    "@vue/cli-service": "5.0.0-beta.7",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.3",
+    "naive-ui": "^2.24.1",
+    "sass": "^1.48.0",
+    "sass-loader": "^12.4.0",
+    "vfonts": "^0.0.3",
+    "vite": "^2.7.2",
+    "vue-cli-plugin-vuetify": "~2.4.5",
+    "vuetify-loader": "^2.0.0-alpha.0"
   }
 }
