--- a/auth/web/front/package.json
+++ b/auth/web/front/package.json
@@ -8,30 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
-    "balm-ui": "^9.40.0",
-    "qrcode-reader-vue3": "^3.1.2",
     "qrcode-vue3": "^1.4.17",
-    "roboto-fontface": "*",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.12",
-    "vuetify": "^3.0.0-alpha.0",
-    "webfontloader": "^1.0.0"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@vicons/ionicons5": "^0.11.0",
-    "@vicons/material": "^0.11.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vitejs/plugin-vue-jsx": "^1.3.3",
     "@vue/cli-plugin-babel": "5.0.0-beta.7",
     "@vue/cli-service": "5.0.0-beta.7",
     "@vuetify/vite-plugin": "^1.0.0-alpha.3",
     "naive-ui": "^2.24.1",
-    "sass": "^1.48.0",
-    "sass-loader": "^12.4.0",
-    "vfonts": "^0.0.3",
-    "vite": "^2.7.2",
-    "vue-cli-plugin-vuetify": "~2.4.5",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "vite": "^2.7.2"
   }
 }
