--- a/auth/html/front/package.json
+++ b/auth/html/front/package.json
@@ -18,6 +18,7 @@
     "@vue/cli-plugin-babel": "5.0.0-beta.7",
     "@vue/cli-service": "5.0.0-beta.7",
     "@vuetify/vite-plugin": "^1.0.0-alpha.3",
+    "axios": "^0.25.0",
     "naive-ui": "^2.24.1",
     "vite": "^2.7.2"
   }
