--- a/oauth2/cfg.yaml
+++ b/oauth2/cfg.yaml
@@ -2,11 +2,20 @@ name: oauth2-service-1
 addr: :10001
 test: :10002
 log:
- rootDir: ./log/
- maxFileSize: 10M
- maxKeepDay: 2
- syncInterval: 3000
- std: out
- disableLevel: []
+  rootDir: ./log/
+  maxFileSize: 10M
+  maxKeepDay: 2
+  syncInterval: 3000
+  std: out
+  disableLevel: []
 db:
- url: mysql://root:mysql123_aa@tcp(192.168.31.177:3306)/oauth2?charset=utf8mb4&parseTime=True&loc=Local
+  url: mysql://root:mysql123_aa@tcp(192.168.31.177:3306)/oauth2?charset=utf8mb4&parseTime=True&loc=Local
+redis:
+  addrs:
+    - 192.168.31.177:6379
+  db: 0
+  username:
+  password: redis_123
+  cmdTimeout: 3
+session:
+  expires: 120
