--- a/oauth2/cfg.yaml
+++ b/oauth2/cfg.yaml
@@ -42,12 +42,12 @@ session:
   # 过期时间，单位秒
   expires: 1200
 oauth2:
-  # 是否启用 Implicit 授权模式
+  # 是否启用隐密授权模式
   enableImplicitGrant: true
-  # 是否启用 Password 授权模式
+  # 是否启用密码授权模式
   enablePasswordGrant: true
-  # 是否启用 Client 授权模式
-  enableClientGrant: true
+  # 是否启用客户端凭证授权模式
+  enableClientCredentialsGrant: true
   # 授权码过期时间
   authorizationCodeExpires: 300
   # 授权码确认页面过期时间
