--- a/apigateway/cfg.yaml
+++ b/apigateway/cfg.yaml
@@ -1,9 +1,9 @@
 # 服务名称
-name: oauth2-service-1
-# 监听地址
-addr: localhost:10000
-# 测试用的
-test: localhost:20000
+name: apigateway-service-1
+# 管理地址
+adminAddr: :10001
+# 代理地址
+proxyAddr: :10002
 log:
   # 日志目录
   rootDir: ./log/
@@ -19,7 +19,7 @@ log:
   disableLevel: []
 db:
   # mysql / sqlite3
-  url: mysql://root:mysql123_aa@tcp(192.168.31.177:3306)/oauth2?charset=utf8mb4&parseTime=True&loc=Local
+  url: mysql://root:mysql123_aa@tcp(192.168.31.177:3306)/apigateway?charset=utf8mb4&parseTime=True&loc=Local
 redis:
   # 客户端名称
   name:
@@ -27,34 +27,11 @@ redis:
   addrs:
     - 192.168.31.177:6379
   # 数据库
-  db: 0
-  # 用户名 6.0 以上
-  username:
+  db: 1
   # 密码
   password: redis_123
-  # 哨兵用户名
-  sentinelUsername:
-  # 哨兵密码
-  sentinelPassword:
   # 执行一次命令的超时时间，单位秒
   cmdTimeout: 3
 session:
   # 过期时间，单位秒
   expires: 1200
-oauth2:
-  # 是否启用隐密授权模式
-  enableImplicitGrant: true
-  # 是否启用密码授权模式
-  enablePasswordGrant: true
-  # 是否启用客户端凭证授权模式
-  enableClientCredentialsGrant: true
-  # 授权码过期时间
-  authorizationCodeExpires: 300
-  # 授权码确认页面过期时间
-  authorizationFormExpires: 180
-  # 访问令牌过期时间
-  accessTokenExpires: 3600
-  # 刷新令牌过期时间
-  refreshTokenExpires: 86400
-  # 访问令牌的类型
-  accessTokenType: Bearer
